[project]
name = "lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-adk>=2.1.0",
    "google-genai>=1.75.0",
    "langchain>=1.3.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "mcp>=1.27.2",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
